# src/app.js
@@ -10,6 +10,7 @@ const setupSwagger = require('./swagger/swagger');
 const healthRoutes = require('./modules/health/health.routes');
 const authRoutes = require('./modules/auth/auth.routes');
 const usersRoutes = require('./modules/users/users.routes');
+const rolesRoutes = require('./modules/roles/roles.routes');
 
 const app = express();
 
@@ -22,6 +23,7 @@ setupSwagger(app);
 app.use('/health', healthRoutes);
 app.use('/auth', authRoutes);
 app.use('/usuarios', usersRoutes);
+app.use('/roles', rolesRoutes);
 
 app.use(notFound);
 app.use(errorHandler);
